# BgroundTools

./: .gitignore  CMakeLists.txt  makefile
include/: timer.hpp
include/multiProc/: createChildProc.hpp  execFunc.hpp
include/multi_proc/: create_child_proc.hpp  exec_func.hpp  wait_waitpid.hpp
include/multi_thread/: condition_variable.hpp  join.hpp  lock.hpp  mutex.hpp  new_features.hpp  threadpool.hpp  wait_waitfor.hpp
src/: main_multiProc.cpp  main_multi_proc.cpp  main_multi_thread.cpp  main_utest.cpp
